--- a/front-end/index.html
+++ b/front-end/index.html
@@ -638,7 +638,7 @@
                         <span class="text-white fs-40 icon-Selected-file"><span class="path1"></span><span
                                 class="path2"></span></span>
                     </div>
-                    <h1 class="countnm my-10 text-white fw-300">45,341+</h1>
+                    <<h1 class="countnm my-10 text-white fw-300">5428</h1>
                     <div class="text-uppercase text-white">Happy Customers</div>
                 </div>
             </div>
@@ -647,7 +647,7 @@
                     <div class="w-80 h-80 l-h-100 rounded-circle b-1 border-white text-center mx-auto">
                         <span class="text-white fs-40 icon-Edit"><span class="path1"></span><span class="path2"></span></span>
                     </div>
-                    <h1 class="countnm my-10 text-white fw-300">25+</h1>
+                    <h1 class="countnm my-10 text-white fw-300">120</h1>
                     <div class="text-uppercase text-white">Years Experience</div>
                 </div>
             </div>
@@ -657,7 +657,7 @@
                         <span class="text-white fs-40 icon-Briefcase"><span class="path1"></span><span
                                 class="path2"></span></span>
                     </div>
-                    <h1 class="countnm my-10 text-white fw-300">1,824+</h1>
+                    <h1 class="countnm my-10 text-white fw-300">7485</h1>
                     <div class="text-uppercase text-white">5 Star Reviews</div>
                 </div>
             </div>
@@ -667,7 +667,7 @@
                         <span class="text-white fs-40 icon-Add-user"><span class="path1"></span><span
                                 class="path2"></span></span>
                     </div>
-                    <h1 class="countnm my-10 text-white fw-300">12+</h1>
+                    <h1 class="countnm my-10 text-white fw-300">100</h1>
                     <div class="text-uppercase text-white">Qualified Examiners</div>
                 </div>
             </div>
