--- a/front-end/index.html
+++ b/front-end/index.html
@@ -638,7 +638,7 @@
                         <span class="text-white fs-40 icon-Selected-file"><span class="path1"></span><span
                                 class="path2"></span></span>
                     </div>
-                    <<h1 class="countnm my-10 text-white fw-300">5428</h1>
+                    <h1 class="countnm my-10 text-white fw-300">5428</h1>
                     <div class="text-uppercase text-white">Happy Customers</div>
                 </div>
             </div>
